fixed tooltip not showing in the correct place

--- a/procedural-generation/index.css
+++ b/procedural-generation/index.css
@@ -135,6 +135,14 @@ body {
     user-select: none;
 }
 
+.option {
+    position: relative;
+    display: inherit;
+    grid-template-columns: inherit;
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
 .wideButton {
     grid-column-start: 1;
     grid-column-end: 3;
